WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175538
[Cache API] Ensure ResourceResponse is not null when redirected/tainting/type fields are set
https://bugs.webkit.org/show_bug.cgi?id=175538
Summary
[Cache API] Ensure ResourceResponse is not null when redirected/tainting/type...
youenn fablet
Reported
2017-08-14 10:06:52 PDT
[Cache API] Ensure ResourceResponse is not null when redirected/tainting/type fields are set
Attachments
Patch
(3.25 KB, patch)
2017-08-14 10:10 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(2.61 KB, patch)
2017-08-15 14:58 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-08-14 10:10:24 PDT
Created
attachment 318046
[details]
Patch
Chris Dumez
Comment 2
2017-08-14 16:19:36 PDT
Comment on
attachment 318046
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=318046&action=review
> Source/WebCore/platform/network/ResourceResponseBase.cpp:237 > + lazyInit(CommonFieldsOnly);
I don't think this is needed since m_type is not used to initialize the underlying network object. m_type is a Webkit concept at this point, not an underlying network layer concept.
> Source/WebCore/platform/network/ResourceResponseBase.cpp:242 > +void ResourceResponseBase::setRedirected(bool isRedirected)
Is this one really needed? I'd expect such responses to have a URL.
> Source/WebCore/platform/network/ResourceResponseBase.cpp:249 > +void ResourceResponseBase::setTainting(Tainting tainting)
Is this one really needed? I'd expect such responses to have a URL.
youenn fablet
Comment 3
2017-08-15 14:58:35 PDT
Created
attachment 318178
[details]
Patch
WebKit Commit Bot
Comment 4
2017-08-15 15:38:28 PDT
Comment on
attachment 318178
[details]
Patch Clearing flags on attachment: 318178 Committed
r220764
: <
http://trac.webkit.org/changeset/220764
>
WebKit Commit Bot
Comment 5
2017-08-15 15:38:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-08-15 15:39:45 PDT
<
rdar://problem/33906142
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug