[Cache API] Ensure ResourceResponse is not null when redirected/tainting/type fields are set https://bugs.webkit.org/show_bug.cgi?id=175538

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-15
Reviewed by Chris Dumez.

No change of behavior.
This change ensures that response type is preserved when encoding/decoding ResourceResponse, in particular the error type.
This will allow Cache API to preserve responses when reading them from a different process.

* platform/network/ResourceResponseBase.cpp:
(WebCore::ResourceResponseBase::setType):
* platform/network/ResourceResponseBase.h:
(WebCore::ResourceResponseBase::setType):

Canonical link: https://commits.webkit.org/192272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220764 268f45cc-cd09-0410-ab3c-d52691b4dbfc