Source/WebCore/platform/network/ResourceResponseBase.cpp
@@ -232,6 +232,12 @@ void ResourceResponseBase::setTextEncodingName(const String& encodingName)
     // FIXME: Should invalidate or update platform response if present.
 }
 
+void ResourceResponseBase::setType(Type type)
+{
+    m_isNull = false;
+    m_type = type;
+}
+
 void ResourceResponseBase::includeCertificateInfo() const
 {
     if (m_certificateInfo)
